--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,21 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
+
+    implementation 'com.dynamsoft:dynamsoftcamerasdk:2.0@aar'
+    implementation 'me.shaohui:bottomdialog:1.1.9'
+    implementation  'com.android.support:exifinterface:26.1.0'
+    implementation 'cn.bingoogolapple:bga-baseadapter:1.2.9@aar'
+    implementation 'q.rorbin:badgeview:1.1.3'
+    implementation 'com.nispok:snackbar:2.11.+'
+    implementation 'com.github.barteksc:android-pdf-viewer:3.0.0-beta.5'
+}
+
+repositories {
+    maven {
+        url "http://download.dynamsoft.com/maven/dcs"
+    }
+}
+repositories {
+    flatDir { dirs 'libs' }
 }
