--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'q.rorbin:badgeview:1.1.3'
     implementation 'com.nispok:snackbar:2.11.+'
     implementation 'com.github.barteksc:android-pdf-viewer:3.0.0-beta.5'
-    compile 'com.android.support:support-v4:+'
+    implementation 'com.android.support:support-v4:+'
 }
 
 repositories {
